# menura

./: .gitignore  .pdm-python  README.md  pyproject.toml  resources
menura/: main.py  requirements.txt
menura/src/: record.py  transcript.py
scripts/: record.py  transcript.py
src/: main.py  record.py  transcript.py
transciptions/: output.txt
