[tool.poetry]
name = "menura"
version = "0.1.0"
description = "A transcript tool based on AI"
authors = ["MASG", "ARM"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.4"
pynput = "^1.7.7"
transformers = "^4.45.2"
pyaudio = "^0.2.14"
wave = "^0.0.2"
flet = "^0.24.1"
torch = { version = "^2.0.0", optional = true }
accelerate = { version = "^0.26.0", optional = true }
numpy = "1.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"